fix(swagger): fix swagger doc for department collection
