# swagger/swagger-output.yaml
@@ -504,7 +504,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/department'
-  /dpeartment/{id}:
+  /department/{id}:
     get:
       summary: Get a department by ID
       tags:
@@ -525,6 +525,22 @@ paths:
                 $ref: '#/components/schemas/department'
         '404':
           description: User not found
+    delete:
+      summary: Delete a department member by ID
+      tags:
+        - Department
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The department ID
+      responses:
+        '200':
+          description: Department member deleted
+        '404':
+          description: Department not found
   /deparment/{id}:
     put:
       summary: Update a deparment by ID
@@ -552,23 +568,6 @@ paths:
                 $ref: '#/components/schemas/department'
         '400':
           description: Invalid input
-        '404':
-          description: Department not found
-  /department/{id}:
-    delete:
-      summary: Delete a department member by ID
-      tags:
-        - Department
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-          description: The department ID
-      responses:
-        '200':
-          description: Department member deleted
         '404':
           description: Department not found
   /enrollment:
